--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,34 @@
+aiofiles==24.1.0
+aiogram==3.13.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.0
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 environs==11.0.0
+frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.10
+magic-filter==1.0.12
 marshmallow==3.22.0
+multidict==6.1.0
 packaging==24.1
 pip==23.2.1
+propcache==0.2.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 python-dotenv==1.0.1
+python-telegram-bot==21.6
 requests==2.32.3
+sniffio==1.3.1
+typing_extensions==4.12.2
 urllib3==2.2.3
+yarl==1.14.0
+
+
 
